fixed contrast on homepage

--- a/css/sections/menu.css
+++ b/css/sections/menu.css
@@ -14,7 +14,7 @@
 	font-family: var(--playfair-display);
 	font-weight: 600;
 	line-height: 78px;
-	color: #fff;
+	color: black;
 	text-align: center;
 }
 
@@ -81,7 +81,7 @@
 	font-size: 24px;
 	line-height: 32px;
 	font-family: var(--playfair-display);
-	color: #fff;
+	color: black;
 	text-align: center;
 }
 
